# ERIAN

./: README.md
OSE3AD/AVL_Training/: Traning_Steps.pptx
OSE3AD/Learning_Materials/: CoordinationTransformation.fmu  add_client.fmu
OSE3AD/ModelConnect_Projects/beginner_tutorial/: beginner_tutorials.7z  error2.txt  modelConnectError.txt
OSE3AD/ModelConnect_Projects/beginner_tutorial/beginner_tutorials1/: CMakeLists.txt  package.xml
OSE3AD/ModelConnect_Projects/beginner_tutorial/beginner_tutorials1/fmu_add_client/: CMakeLists.txt  add_client.cpp  fmi2Functions.h  modelDescription.xml
OSE3AD/ModelConnect_Projects/beginner_tutorial/beginner_tutorials1/launch/: turtlemimic.launch
OSE3AD/ModelConnect_Projects/mapping/: mapping.proj  mapping.proj.2.backup  mapping.proj.3.backup  mapping.proj.4.backup
OSE3AD/ModelConnect_Projects/mapping/mapping_files/modeling/components/FMU/: mapping_fmu.fmu
OSE3AD/ModelConnect_Projects/mapping/simulation/mapping/Model_CONNECT_1.Case_set_1.Case_1/: model.asix  parameters.xml
modelConnect/: FMU firstReport.docx  NTU_2 (waypoint).xml  NTU_2.xml  model.drawio  modelConnect.xlsx  moduleManager.xml  waypoint path12.ods
